# obot-skills

./: .gitignore  .ignoreobotcatalogs  README.md  braze_mcp_server.yaml
Braze/MCP/braze-mcp-server/: .env.example  README.md  pyproject.toml
Braze/MCP/braze-mcp-server/src/braze_mcp_server/: __init__.py  server.py
ai-marketing-solution-architect/: SKILL.md
ai-marketing-solution-architect/agents/: openai.yaml
ai-marketing-solution-architect/examples/: abandoned-basket-sfmc.md  nps-feedback-qualtrics.md  post-purchase-braze-qualtrics-movable-ink.md  reactivation-dotdigital.md  welcome-braze.md  winback-bloomreach.md
ai-marketing-solution-architect/prompts/: 01-intent-parser.md  02-journey-designer.md  03-platform-mapper.md  04-diagram-generator.md  05-governance-validator.md
ai-marketing-solution-architect/references/: journey-design-library.md  output-contract.md  platform-map.md
ai-marketing-solution-architect/schemas/: journey.schema.yaml
ai-marketing-solution-architect/templates/: journey-design.md
archive/braze-api-workflows/: CHANGELOG.md  profiles.example.json
braze-api-workflows/: SKILL.md
braze-api-workflows/scripts/: duplicate_campaign.py  list_email_templates.py  list_scheduled_broadcasts.py  trigger_campaign.py  upload_media_asset.py
customer-journey-playbook/: Digital Customer Journey Playbook.md  SKILL.md
customer-journey-playbook/agents/: openai.yaml
customer-journey-playbook/references/: catalog-index.md  playbook-method.md
outbound-campaign-brief/: SKILL.md
release-readiness-review/: SKILL.md
(+31 files in other folders)
